--- a/application-common.properties
+++ b/application-common.properties
@@ -54,6 +54,11 @@ eureka.client.healthcheck.enabled=true
 eureka.client.register-with-eureka=true
 eureka.instance.lease-expiration-duration-in-seconds=2
 eureka.instance.lease-renewal-interval-in-seconds=2
+eureka.instance.hostname=host.docker.internal
+eureka.instance.prefer-ip-address= true
+eureka.instance.ip-address=host.docker.internal
+#actuator
+management.endpoints.web.exposure.include=*
 eureka.instance.hostname=eureka-server
 #actuator
 management.endpoints.web.exposure.include=*
